--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
-
+        classpath "com.alibaba:arouter-register:1.0.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
 
