--- a/Feature/message/build.gradle
+++ b/Feature/message/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
 }
 apply plugin: 'com.alibaba.arouter'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
 
@@ -28,15 +30,53 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    testOptions {
+        unitTests {
+            unitTests.returnDefaultValues = true
+            includeAndroidResources = true
+        }
+    }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     implementation project(':shell')
     implementation 'com.alibaba:arouter-api:1.5.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
+    kapt 'com.alibaba:arouter-compiler:1.5.1'
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
+
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:runner:1.4.0'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "org.mockito:mockito-core:2.23.0"
+    testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    kaptTest "androidx.databinding:databinding-compiler:7.4.0-alpha01"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
+    testImplementation "org.mockito:mockito-inline:3.3.3"
+    testImplementation "android.arch.core:core-testing:1.1.1"
+
+    debugImplementation "androidx.fragment:fragment-testing:1.3.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
