--- a/Feature/message/build.gradle
+++ b/Feature/message/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    implementation "androidx.room:room-runtime:2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
+    kapt "androidx.room:room-compiler:2.2.6"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.test:runner:1.4.0'
@@ -74,6 +77,7 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
     testImplementation "org.mockito:mockito-inline:3.3.3"
     testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "androidx.room:room-testing:2.2.6"
 
     debugImplementation "androidx.fragment:fragment-testing:1.3.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
