19｜仓库&版本管理：如何从物理边界上规范依赖？

--- a/Function/shell/build.gradle
+++ b/Function/shell/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     api project(':log')
+    api 'com.jkb.junbin.sharing.library:log:1.0.0'
     api project(':net')
     api project(':storage')
     api project(':transfer')
